Bugfix: Wrapped image in link.  Visually hid thumbnail date on mobile

--- a/src/IAmBacon/IAmBacon/Content/sass/pages/home/home.scss
+++ b/src/IAmBacon/IAmBacon/Content/sass/pages/home/home.scss
@@ -273,6 +273,10 @@ body {
 .articleThumb-date {
 	float: left;
 	padding-left: 5px;
+
+	@include respond-to(extra-small) {
+		@include visually-hidden;
+	}
 }
 
 .articleThumb-category {
