--- a/src/IAmBacon/IAmBacon/Content/sass/utilities/_typography.scss
+++ b/src/IAmBacon/IAmBacon/Content/sass/utilities/_typography.scss
@@ -36,11 +36,5 @@
 
 // Hides text but not for screen readers.
 .visuallyHidden {
-  position: absolute !important;
-  overflow: hidden !important;
-  width: 1px !important;
-  height: 1px !important;
-  padding: 0 !important;
-  border: 0 !important;
-  clip: rect(1px, 1px, 1px, 1px) !important;
+  @include visually-hidden;
 }
